<resources>
    <string name="app_name">Discover Book</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_starred">Starred</string>
    <string name="title_profile">Profile</string>
    <string name="book_title">Book title</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_to_pdf">Go to PDF</string>
    <string name="published_by">Published by:</string>
    <string name="publish_date">Publish date:</string>
    <string name="authors">Authors</string>
    <string name="language">Language</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="age">Age</string>
    <string name="birth_date">Birth date</string>
    <string name="choose_date">Choose date</string>
    <string name="location">Location</string>
    <string name="choose_location">Choose location</string>
    <string name="save">Save</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="edit">Edit</string>
    <string name="choose_image">Choose Image</string>
    <string name="search">Search</string>
    <string name="harry_potter">Harry Potter</string>
    <string name="history_of_hogwarts">History of Hogwarts</string>
    <string name="j_k_rowling">J. K. Rowling</string>
    <string name="page_count">Page count</string>
    <string name="upload">Upload</string>
    <string name="Amount">Amount</string>
    <string name="favourites">Favourites</string>
    <string name="store">Store</string>
    <string name="add_book">Add Book</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="comments">Comments</string>
    <string name="comment">Comment</string>
    <string name="buy">Buy</string>
    <string name="sign_out">Sign out</string>
    <string name="read">Read</string>
    <string name="post_title">Post Title</string>
    <string name="post">Post</string>
</resources>
