<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_add_book"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.fincar.fragments.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/home_fragment"/>

    <fragment
        android:id="@+id/navigation_store"
        android:name="com.example.fincar.fragments.store.StoreFragment"
        android:label="@string/store"
        tools:layout="@layout/fragment_books_store"/>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.fincar.fragments.search_books.SearchBooksFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search_books"/>
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.fincar.fragments.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile"/>
    <fragment
        android:id="@+id/navigation_read"
        android:name="com.example.fincar.fragments.read.ReadFragment"
        android:label="@string/read"
        tools:layout="@layout/fragment_read" />
</navigation>
