<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="book"
            type="com.example.fincar.bean.book.GoogleBook" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.book_details.BookDetailsActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/detailsCollapsingLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="@color/colorAccent"
                app:expandedTitleMarginEnd="64dp"
                app:expandedTitleMarginStart="48dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">


                <ImageView
                    android:id="@+id/detailsBookImage"
                    imageFromUrl="@{book.photoUrl}"
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="60dp"
                    android:contentDescription="@null"
                    android:scaleType="centerCrop"
                    android:transitionName="imageTransition"
                    app:layout_collapseMode="parallax"
                    tools:src="@mipmap/ic_launcher" />


                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/detailsToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_gravity="top"
                    android:gravity="center_vertical"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                    <Button
                        android:id="@+id/pdfButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="4dp"
                        android:background="@android:color/holo_red_dark"
                        android:text="@string/go_to_pdf"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        app:layout_collapseMode="pin" />
                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="4dp"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="vertical">

                <com.varunest.sparkbutton.SparkButton
                    android:id="@+id/starButton"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.984"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.285"
                    app:sparkbutton_activeImage="@drawable/ic_star_active_24dp"
                    app:sparkbutton_iconSize="40dp"
                    app:sparkbutton_inActiveImage="@drawable/ic_star_inactive_24dp"
                    app:sparkbutton_primaryColor="@android:color/holo_orange_dark"
                    app:sparkbutton_secondaryColor="@android:color/holo_red_dark" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/authors" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{book.authors}"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/description" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{book.description}"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    tools:text="Description Description Description Description " />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/category" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{book.description}"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    tools:text="Description Description Description Description " />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/published_by" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{book.publisher}"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    tools:text="publisher" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/publish_date" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{book.publishDate}"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    tools:text="2003" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@{String.valueOf(book.pageCount) + ` Pages`}"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    tools:text="Pages" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_horizontal"
                    android:text="@{`Language : `+book.language}"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    tools:text="EN" />
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>