<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="userModel"
            type="com.example.fincar.models.Account" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/bg_triangles">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            tools:context=".fragments.profile.ProfileFragment">

            <TextView
                android:id="@+id/balanceTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableEnd="@mipmap/ic_coin"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:text="@{String.valueOf(userModel.balance)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                tools:text="1000$" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageView"
                imageFromUrl="@{userModel.imageUrl}"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="36dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@{userModel.firstName +` `+ userModel.lastName}"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/imageView"
                tools:text="@string/first_name" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:drawableStart="@drawable/ic_location_on_24dp"
                android:text="@{userModel.location}"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/location" />

            <Button
                android:id="@+id/editButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_selector"
                android:text="@string/edit"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="#B7C8C7C7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    tools:text="12 \n Purchases"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:gravity="center"
                    android:text="@{String.valueOf(userModel.purchasedBooksCount) + `\n` + `Purchased`}" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    tools:text="23 \n Sold"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:text="@{String.valueOf(userModel.soldBooksCount) + `\n` + `Sold`}" />

            </LinearLayout>

            <TextView
                android:id="@+id/favouritesLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:drawableEnd="@drawable/ic_star_active_24dp"
                android:text="@string/favourites"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toTopOf="@+id/starredBooksListContainer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/balanceTV" />

            <FrameLayout
                android:id="@+id/starredBooksListContainer"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/favouritesLabel" />

            <Button
                android:id="@+id/logOutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_out"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:background="@android:color/transparent"
                android:drawableStart="@mipmap/ic_logout"
                app:layout_constraintStart_toStartOf="@+id/linearLayout"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</layout>